<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">KEGS</string>
  <string name="app_description">Apple IIgs Emulator</string>

  <string name="rom_title">Checking for ROM</string>
  <string name="rom_check">Checking for ROM...</string>
  <string name="rom_error">Unable to obtain ROM.  Find ROM.01 or ROM.03 and put it in /Android/data/com.froop.app.kegs/files/ on your SD Card.</string>
  <string name="image_error">Unable to load requested disk image.</string>
  <string name="error_title">Error</string>
  <string name="dialog_ok">OK</string>
  <string name="dialog_cancel">Cancel</string>

  <string-array name="rom_choices">
    <item>I have a ROM 01</item>
    <item>I have a ROM 03</item>
  </string-array>

  <string name="speed_title">Emulation Speed</string>
  <string-array name="speed_choices">
    <item>1.0 megahertz</item>
    <item>2.8 megahertz</item>
    <item>8.0 megahertz</item>
    <item>16.0 megahertz</item>
    <item>Unlimited</item>
  </string-array>

  <string name="diskimage_title">Choose a disk</string>
  <string name="progress_message">Preparing disk image...</string>
  <string name="zipfile_nomatches">No disk images found</string>

  <string-array name="swapdisk_choices">
    <item>Put disk into drive</item>
    <item>Boot this disk</item>
  </string-array>

  <string-array name="swapdisk_hd_choices">
    <item>Attach hard drive</item>
    <item>Boot this disk</item>
  </string-array>

  <!-- R.menu.actions -->
  <string name="input_joystick">Use Joystick</string>
  <string name="input_mouse">Use Mouse</string>
  <string name="input_keyboard">Keyboard</string>
  <string name="emulation_speed">Emulation Speed</string>
  <string name="diskimage">Disk Images</string>
  <string name="more_keys">Additional Keys</string>
  <string name="power_off">Power Off</string>
</resources>
